replaced hardcoding path to tiler program to one that is set via HTML::TEmplate var

--- a/web/tmpl/GenomeView.tmpl
+++ b/web/tmpl/GenomeView.tmpl
@@ -76,7 +76,8 @@
 //     ##CACHING SYSTEM USING ALL SERVERS
 //     ##################################
           [
-	    'http://coge.iplantcollaborative.org/CoGe/tiler.pl?'
+//	    'http://coge.iplantcollaborative.org/CoGe/tiler.pl?'
+	    '<TMPL_VAR NAME=TILE_SERVER>'
 	  ];
 
 //     ##################################
