--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -79,7 +79,7 @@ populate_page_obj();
    $('#log_text').show(0);
    pageObj.nolog=1;
    setTimeout("read_log(['args__logfile', 'args__'+pageObj.basename, 'args__tempdir', 'args__'+pageObj.tempdir], [monitor_log])",pageObj.waittime);
-   go(['args__c','c','args__D','D','args__g','g','args__A','A','args__gm','gm','args__Dm','Dm','args__blast','blast', 'args__feat_type1','feat_type1', 'args__feat_type2','feat_type2','args__dsgid1','dsgid1', 'args__dsgid2','dsgid2','args__jobtitle','jobtitle','args__basename','args__'+pageObj.basename,'args__email','email','args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+$('#master_width').val(), 'args__dagchainer_type','args__'+$('#dagchainer_type')[0].checked, 'args__ks_type','ks_type', 'args__assemble','args__'+$('#assemble')[0].checked, 'args__axis_metric','axis_metric', 'args__axis_relationship','axis_relationship', 'args__min_chr_size', 'min_chr_size', 'args__show_non_syn','args__'+$('#show_non_syn')[0].checked, 'args__color_type','color_type', 'args__box_diags', 'args__'+$('#box_diags')[0].checked, 'args__merge_algo','merge_algo', 'args__depth_algo', 'depth_algo', 'args__depth_org_1_ratio', 'depth_org_1_ratio', 'args__depth_org_2_ratio', 'depth_org_2_ratio', 'args__depth_overlap', 'depth_overlap', 'args__fid1','args__'+pageObj.fid1, 'args__fid2','args__'+pageObj.fid2, 'args__show_non_syn_dots','args__'+$('#show_non_syn_dots')[0].checked,'args__flip','args__'+$('#flip')[0].checked,'args__clabel','args__'+$('#clabel')[0].checked,'args__skip_rand','args__'+$('#skiprand')[0].checked,'args__color_scheme','color_scheme', 'args__chr_sort_order','chr_sort_order'],[handle_results] );
+   go(['args__c','c','args__D','D','args__g','g','args__A','A','args__gm','gm','args__Dm','Dm','args__blast','blast', 'args__feat_type1','feat_type1', 'args__feat_type2','feat_type2','args__dsgid1','dsgid1', 'args__dsgid2','dsgid2','args__jobtitle','jobtitle','args__basename','args__'+pageObj.basename,'args__email','email','args__regen_images','args__'+$('#regen_images')[0].checked, 'args__width', 'args__'+$('#master_width').val(), 'args__dagchainer_type','args__'+$('#dagchainer_type')[0].checked, 'args__ks_type','ks_type', 'args__assemble','args__'+$('#assemble')[0].checked, 'args__axis_metric','axis_metric', 'args__axis_relationship','axis_relationship', 'args__min_chr_size', 'min_chr_size', 'args__show_non_syn','args__'+$('#show_non_syn')[0].checked, 'args__color_type','color_type', 'args__box_diags', 'args__'+$('#box_diags')[0].checked, 'args__merge_algo','merge_algo', 'args__depth_algo', 'depth_algo', 'args__depth_org_1_ratio', 'depth_org_1_ratio', 'args__depth_org_2_ratio', 'depth_org_2_ratio', 'args__depth_overlap', 'depth_overlap', 'args__fid1','args__'+pageObj.fid1, 'args__fid2','args__'+pageObj.fid2, 'args__show_non_syn_dots','args__'+$('#show_non_syn_dots')[0].checked,'args__flip','args__'+$('#flip')[0].checked,'args__clabel','args__'+$('#clabel')[0].checked,'args__skip_rand','args__'+$('#skiprand')[0].checked,'args__color_scheme','color_scheme', 'args__chr_sort_order','chr_sort_order', 'args__codeml_min', 'codeml_min', 'args__codeml_max', 'codeml_max'],[handle_results] );
  }
 }
 
@@ -648,7 +648,7 @@ function post_to_grimm(seq1, seq2)
          -to-
         <input type=text size=2 id="depth_org_2_ratio" value="<TMPL_VAR NAME="DEPTH_ORG_2_RATIO">">
         <span style="color:#009900" id=depth_org_2></span><br>
-        Overlap distance: <input type=text size=8 id="depth_overlap" value="<TMPL_VAR NAME="DEPTH_OVERLAP"> ">
+        Overlap distance: <input type=text size=8 id="depth_overlap" value="<TMPL_VAR NAME="DEPTH_OVERLAP">">
        </div>
 
 
@@ -666,12 +666,17 @@ function post_to_grimm(seq1, seq2)
      <select name="color_scheme" id = "color_scheme">
       <option value = 0 <TMPL_VAR NAME=CS0> >Rainbow 1</option>
       <option value = 1 <TMPL_VAR NAME=CS1> >Rainbow 2</option>
-      <option value = 5 <TMPL_VAR NAME=CS5> >2xRainbow</option>
-      <option value = 6 <TMPL_VAR NAME=CS6> >3xRainbow</option>
+      <option value = 5 <TMPL_VAR NAME=CS5> >2.1xRainbow</option>
+      <option value = 7 <TMPL_VAR NAME=CS6> >2.2xRainbow</option>
+      <option value = 6 <TMPL_VAR NAME=CS6> >3.1xRainbow</option>
+      <option value = 8 <TMPL_VAR NAME=CS6> >3.2xRainbow</option>
       <option value = 2 <TMPL_VAR NAME=CS2> >RYB</option>
       <option value = 3 <TMPL_VAR NAME=CS3> >RYBG</option>
       <option value = 4 <TMPL_VAR NAME=CS4> >Black-Red</option>
     </select>
+   <br>
+   Min Val: <input type=text size=4 id="codeml_min" value="<TMPL_VAR NAME="CODEML_MIN">">
+   Max Val: <input type=text size=4 id="codeml_max" value="<TMPL_VAR NAME="CODEML_MAX">">
    <br>
    <span class=small style="color:red">&nbsp;&nbsp;&nbsp;&nbsp; Only applicable to protein coding sequences (CDS vs. CDS)</span> 
 </table>
