added new color schemes

--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -667,12 +667,14 @@ function post_to_grimm(seq1, seq2)
       <option value = 0 <TMPL_VAR NAME=CS0> >Rainbow 1</option>
       <option value = 1 <TMPL_VAR NAME=CS1> >Rainbow 2</option>
       <option value = 5 <TMPL_VAR NAME=CS5> >2.1xRainbow</option>
-      <option value = 7 <TMPL_VAR NAME=CS6> >2.2xRainbow</option>
+      <option value = 7 <TMPL_VAR NAME=CS7> >2.2xRainbow</option>
       <option value = 6 <TMPL_VAR NAME=CS6> >3.1xRainbow</option>
-      <option value = 8 <TMPL_VAR NAME=CS6> >3.2xRainbow</option>
+      <option value = 8 <TMPL_VAR NAME=CS8> >3.2xRainbow</option>
       <option value = 2 <TMPL_VAR NAME=CS2> >RYB</option>
       <option value = 3 <TMPL_VAR NAME=CS3> >RYBG</option>
       <option value = 4 <TMPL_VAR NAME=CS4> >Black-Red</option>
+      <option value = 9 <TMPL_VAR NAME=CS9> >3xRed-Blue</option>
+      <option value = 10 <TMPL_VAR NAME=CS10> >3xBlue-Orange</option>
     </select>
    <br>
    Min Val: <input type=text size=4 id="codeml_min" value="<TMPL_VAR NAME="CODEML_MIN">">
