--- a/web/tmpl/UserPage.tmpl
+++ b/web/tmpl/UserPage.tmpl
@@ -375,7 +375,7 @@ function filter_rows (search_text){
 	<td><TMPL_VAR NAME=USER_NAME></td>
 	<tr><td>Real Name</td>
 	<td><TMPL_VAR NAME=REAL_NAME></td>
-	<tr><td>E-mail Atdress</td>
+	<tr><td>E-mail Address</td>
 	<td><TMPL_VAR NAME=EMAIL></td>
 	<tr><td>Title</td>
 	<td><TMPL_VAR NAME=DESC></td>
