added powered by iplant

--- a/web/tmpl/footer.tmpl
+++ b/web/tmpl/footer.tmpl
@@ -1,5 +1,6 @@
 <br>
 <HR>
+<div style="float:right"><image src="./picts/iplant_power.png"></div>
 <DIV>
 <TMPL_IF NAME=LOGON>
 	<span class=small>Currently logged in as, <TMPL_VAR NAME=USER>  <a href="index.pl?logout=1" class="small">Sign-out</a></span>
