added link to groups.pl

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -153,6 +153,7 @@ $(document).ready( function() {
 	</li>	<li><a href='javascript:void(0)'>Preferences</a>
 	 <ul>
 	   <li><a href="UserPage.pl" target="_self">User Profile</a></li>
+	   <li><a href="Groups.pl" target="_self">User/Data Groups</a></li>
 <!--	  <li><a href="javascript:void(0)" target="_self">Animation</a>
 	    <ul class="animations">
 	      <li><a href="javascript:void(0)" target="_self" onClick="define_animation_speed(0)">Off</a></li>
