minor change to an inline-block for ui-icon

--- a/web/css/jquery-ui-1.7.2.custom.css
+++ b/web/css/jquery-ui-1.7.2.custom.css
@@ -27,7 +27,7 @@
 ----------------------------------*/
 
 /* states and images */
-.ui-icon { display: block; text-indent: -99999px; overflow: hidden; background-repeat: no-repeat; }
+.ui-icon { display: inline-block; text-indent: -99999px; overflow: hidden; background-repeat: no-repeat; }
 
 
 /* Misc visuals
