removed unused class

--- a/web/tmpl/Groups.tmpl
+++ b/web/tmpl/Groups.tmpl
@@ -267,7 +267,7 @@ function remove_genome (opts) {
   </select>
 </td>
 
- <td><span id=create_group style="font-size: .75em" class='ui-button ui-button-go ui-corner-all go_run' onClick="create_group();">Create new group</span>
+ <td><span id=create_group style="font-size: .75em" class='ui-button ui-button-go ui-corner-all' onClick="create_group();">Create new group</span>
 </tr>
 </table>
 </div>
